@@ -1,3 +1,8 @@
+Wed Apr 29 00:56:19 1998  Tim Janik  <timj@gtk.org>
+
+	* app/text_tool.c (text_create_dialog): enable adjustment of the
+	scrolled window to keep the focused font visible.
+
 Tue Apr 28 15:09:02 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* plug-ins/CEL/CEL.c
